# retina-therm

./: .gitignore  BUGS.md  README.md  justfile  pyproject.toml
doc/examples/: CONFIG-batch.yml  CONFIG-simple.yml  justfile  powerconf_extensions.py
doc/examples/simple-output/: Tvst-10_micrometer.txt
doc/examples/simple-output/CW/: Tvst-10 micrometer.txt
doc/writeups/derivation/: .lvimrc  2023-GreensFunctionSolutionForRetinaLaserExposure.tex
retina_therm/: cli.py  config_utils.py  greens_functions.py  multi_pulse_builder.py  parallel_jobs.py  schemas.py  signals.py  utils.py
src/retina_therm/: cli.py  config.py  greens_functions.py  parallel_jobs.py  signals.py  utils.py
src/retina_therm/wasm/: marcum_q.wasm
tests/: test_approximations.py  test_benchmarks.py  test_cli.py  test_config_utils.py  test_greens_functions.py  test_mainster.py  test_marcum_q.py  test_multi_pulse_builder.py  test_parallel_jobs.py  test_retina_exposures.py  test_schemas.py  test_signals.py  test_utils.py
wasm/marcum-q-function/: marcum_q.wasm
